[project]
name = "audio-timestamp-identification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.6",
    "moviepy>=2.2.1",
    "opencv-python>=4.12.0.88",
    "seaborn>=0.13.2",
]
